--- a/index.html
+++ b/index.html
@@ -150,15 +150,15 @@ const nextBtn = document.querySelector('.next-arrow');
 // 1. Define the slides (Background URL and Text)
 const slides = [
     {
-        url: 'images/im1.jpeg',
+        url: './Images/im1.jpeg',
         text: 'Largest Exporter of Processed Granite across the Globe'
     },
     {
-        url: 'images/im2.jpeg',
+        url: './Images/im2.jpeg',
         text: 'Advanced Technology for Precision Stone Processing'
     },
     {
-        url: 'images/im6.jpeg',
+        url: './Images/im6.jpeg',
         text: 'Trusted Global Supplier of Premium Natural Stone'
     }
 ];
@@ -238,73 +238,73 @@ setInterval(() => {
 
     <div class="product-grid">
         <div class="product-card">
-            <img src="images/t1.jpeg" alt="Granite 1">
+            <img src="./Images/t1.jpeg" alt="Granite 1">
             <div class="product-overlay">
                 <h3 class="overlay-title">Black Galaxy</h3>
             </div>
         </div>
         <div class="product-card">
-            <img src="images/t2.jpeg" alt="Granite 2">
+            <img src="./Images/t2.jpeg" alt="Granite 2">
             <div class="product-overlay">
                 <h3 class="overlay-title">Absolute Black</h3>
             </div>
         </div>
         <div class="product-card">
-            <img src="images/t3.jpeg" alt="Granite 3">
+            <img src="./Images/t3.jpeg" alt="Granite 3">
             <div class="product-overlay">
                 <h3 class="overlay-title">Steel Grey</h3>
             </div>
         </div>
         <div class="product-card">
-            <img src="images/t4.jpeg" alt="Granite 4">
+            <img src="./Images/t4.jpeg" alt="Granite 4">
             <div class="product-overlay">
                 <h3 class="overlay-title">Cosmic Black</h3>
             </div>
         </div>
         <div class="product-card">
-            <img src="images/t5.jpeg" alt="Granite 5">
+            <img src="./Images/t5.jpeg" alt="Granite 5">
             <div class="product-overlay">
                 <h3 class="overlay-title">Tan Brown</h3>
             </div>
         </div>
         <div class="product-card">
-            <img src="images/t6.jpeg" alt="Granite 6">
+            <img src="./Images/t6.jpeg" alt="Granite 6">
             <div class="product-overlay">
                 <h3 class="overlay-title">Viscon White</h3>
             </div>
         </div>
         <div class="product-card">
-            <img src="images/t7.jpeg" alt="Granite 7">
+            <img src="./Images/t7.jpeg" alt="Granite 7">
             <div class="product-overlay">
                 <h3 class="overlay-title">Coffee Brown</h3>
             </div>
         </div>
         <div class="product-card">
-            <img src="images/t8.jpeg" alt="Granite 8">
+            <img src="./Images/t8.jpeg" alt="Granite 8">
             <div class="product-overlay">
                 <h3 class="overlay-title">Black Forest</h3>
             </div>
         </div>
         <div class="product-card">
-            <img src="images/t9.jpeg" alt="Granite 9">
+            <img src="./Images/t9.jpeg" alt="Granite 9">
             <div class="product-overlay">
                 <h3 class="overlay-title">White Galaxy</h3>
             </div>
         </div>
         <div class="product-card">
-            <img src="images/t10.jpeg" alt="Granite 10">
+            <img src="./Images/t10.jpeg" alt="Granite 10">
             <div class="product-overlay">
                 <h3 class="overlay-title">Impala Black</h3>
             </div>
         </div>
         <div class="product-card">
-            <img src="images/t11.jpeg" alt="Granite 11">
+            <img src="./Images/t11.jpeg" alt="Granite 11">
             <div class="product-overlay">
                 <h3 class="overlay-title">Red Multicolor</h3>
             </div>
         </div>
         <div class="product-card">
-            <img src="images/t12.jpeg" alt="Granite 12">
+            <img src="./Images/t12.jpeg" alt="Granite 12">
             <div class="product-overlay">
                 <h3 class="overlay-title">Paradiso</h3>
             </div>
