--- a/about.html
+++ b/about.html
@@ -11,11 +11,13 @@
     <script src="https://unpkg.com/lucide@latest"></script>
     <link rel="stylesheet" href="assets/product.css">
     <link rel="stylesheet" href="assets/about.css">
-    <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">
+
+
 </head>
 
-<body>
+<body class="page-fade">
 
     <!-- CUSTOM GRADIENT NAVBAR (Same as other pages) -->
     <header class="custom-gradient-bg">
@@ -73,6 +75,10 @@
 
             <!-- Main Navigation Links (Bottom) -->
             <nav style="width: 100%;">
+                <!-- Add mobile menu toggle -->
+                <button class="navbar-toggle" aria-label="Open Menu">
+                    <span class="bar"></span>
+                </button>
                 <ul class="nav-links-container">
                     <li><a href="index.html" class="nav-link nav-link-dark">Home</a></li>
                     <li><a href="product.html" class="nav-link nav-link-dark">Products</a></li>
@@ -98,7 +104,7 @@
     ================================= -->
     <section class="parallax-slider">
         <div class="parallax-layer" data-speed="0.12"
-             style="background-image:url('./assets/image/pexels-edward-jenner-4249585.jpg')"></div>
+             style="background-image:url('./assets/image/pexels-karola-g-4210859.jpg')"></div>
 
         <div class="parallax-layer" data-speed="0.22"
              style="background-image:url('./assets/image/pexels-edward-jenner-4249585.jpg')"></div>
@@ -116,7 +122,7 @@
     <!-- ================================
          ABOUT
     ================================= -->
-    <section class="u2-about">
+    <section class="u2-about section-reveal">
         <div class="u2-container">
 
             <div class="u2-left">
@@ -144,7 +150,7 @@
     <!-- ================================
          VISION + CUSTOMER SERVICE
     ================================= -->
-    <section class="u3-vision">
+    <section class="u3-vision section-reveal">
         <img src="./assets/image/pexels-edward-jenner-4252170.jpg" class="u3-main-img">
 
         <div class="u3-boxes">
@@ -176,14 +182,86 @@
         </div>
     </section>
 
+<!-- ================================ STATEMENT ================================ -->
+  <section class="u4-statement py-12 text-center">
+    <h2 class="text-3xl font-bold mb-4">Statement</h2>
+    <p class="text-gray-700 text-lg max-w-3xl mx-auto">Delivering the finest natural stones with precision and world-class service across the globe.</p>
+  </section>
 
-    <!-- ================================
-         STATEMENT
-    ================================= -->
-    <section class="u4-statement">
-        <h2>Statement</h2>
-        <p>Delivering the finest natural stones with precision and world-class service across the globe.</p>
-    </section>
+  <!-- STORY / MISSION SECTION with Parallax BG -->
+  <section class="hero-parallax" style="min-height:60vh;">
+   <div> <img src="./assets/image/pexels-karola-g-4210859.jpg" alt="" style="z-index:-103;"></div>
+    <div class="hero-content">
+      <h1 class="hero-title">Our Story & Mission</h1>
+      <div class="hero-subtext">Delivering the finest natural stones with precision and world-class service across the globe.</div>
+    </div>
+  </section>
+
+  <!-- Animated Timeline Section -->
+  <section class="py-16">
+    <div class="timeline-container max-w-3xl mx-auto">
+      <div class="timeline">
+        <div class="timeline-item">
+          <div class="timeline-dot"></div>
+          <div class="timeline-content glass-card neon p-4">
+            <h3 class="text-xl font-semibold">1953</h3>
+            <p>Futura Stones founded, pioneering the Indian stone export industry.</p>
+          </div>
+        </div>
+        <div class="timeline-item">
+          <div class="timeline-dot"></div>
+          <div class="timeline-content glass-card neon p-4">
+            <h3 class="text-xl font-semibold">1980s</h3>
+            <p>Expansion into global markets, establishing a reputation for quality.</p>
+          </div>
+        </div>
+        <div class="timeline-item">
+          <div class="timeline-dot"></div>
+          <div class="timeline-content glass-card neon p-4">
+            <h3 class="text-xl font-semibold">2000s</h3>
+            <p>Adoption of advanced technology and sustainable practices.</p>
+          </div>
+        </div>
+        <div class="timeline-item">
+          <div class="timeline-dot"></div>
+          <div class="timeline-content glass-card neon p-4">
+            <h3 class="text-xl font-semibold">Today</h3>
+            <p>Global leader in natural stone, serving 100+ countries with excellence.</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- Section Divider -->
+  <div class="h-1 w-3/4 mx-auto my-12 rounded bg-gradient-to-r from-blue-500 to-gray-700"></div>
+
+  <!-- TEAM MEMBERS Section -->
+  <section class="py-16">
+    <h2 class="text-3xl font-bold text-center mb-12">Meet Our Team</h2>
+    <div class="feature-cards-row">
+      <div class="feature-card glass-card neon tilt">
+        <img src="https://randomuser.me/api/portraits/men/32.jpg" alt="CEO" class="w-24 h-24 rounded-full mb-4 shadow-lg mx-auto">
+        <h3 class="font-semibold">Rajesh Kumar</h3>
+        <p class="text-gray-600">CEO & Founder</p>
+      </div>
+      <div class="feature-card glass-card neon tilt">
+        <img src="https://randomuser.me/api/portraits/women/44.jpg" alt="COO" class="w-24 h-24 rounded-full mb-4 shadow-lg mx-auto">
+        <h3 class="font-semibold">Anita Sharma</h3>
+        <p class="text-gray-600">Chief Operations Officer</p>
+      </div>
+      <div class="feature-card glass-card neon tilt">
+        <img src="https://randomuser.me/api/portraits/men/65.jpg" alt="Head of Exports" class="w-24 h-24 rounded-full mb-4 shadow-lg mx-auto">
+        <h3 class="font-semibold">Vikram Singh</h3>
+        <p class="text-gray-600">Head of Exports</p>
+      </div>
+      <div class="feature-card glass-card neon tilt">
+        <img src="https://randomuser.me/api/portraits/women/68.jpg" alt="Sustainability Lead" class="w-24 h-24 rounded-full mb-4 shadow-lg mx-auto">
+        <h3 class="font-semibold">Priya Menon</h3>
+        <p class="text-gray-600">Sustainability Lead</p>
+      </div>
+    </div>
+  </section>
 
 
     <!-- ================================
@@ -319,7 +397,134 @@
         });
     </script>
 
+    <script>
+    // --- Parallax Hero Background ---
+    const heroBg = document.querySelector('.hero-bg-parallax');
+    document.addEventListener('mousemove', e => {
+        if (!heroBg) return;
+        const x = (window.innerWidth / 2 - e.clientX) * 0.03;
+        const y = (window.innerHeight / 2 - e.clientY) * 0.03;
+        heroBg.style.transform = `translate(-50%,-50%) scale(1.04) translate(${x}px,${y}px)`;
+    });
 
-</body>
+    // --- Card Tilt Effect ---
+    document.querySelectorAll('.tilt').forEach(card => {
+        card.addEventListener('mousemove', e => {
+            const rect = card.getBoundingClientRect();
+            const x = e.clientX - rect.left, y = e.clientY - rect.top;
+            const cx = rect.width/2, cy = rect.height/2;
+            const dx = (x-cx)/cx, dy = (y-cy)/cy;
+            card.style.transform = `rotateY(${dx*8}deg) rotateX(${-dy*8}deg) scale(1.04)`;
+        });
+        card.addEventListener('mouseleave', () => {
+            card.style.transform = '';
+        });
+    });
 
-</html>
+    // --- Scroll Reveal Animation ---
+    function revealOnScroll() {
+        document.querySelectorAll('.section-reveal, .feature-card').forEach(el => {
+            const rect = el.getBoundingClientRect();
+            if (rect.top < window.innerHeight - 60) el.classList.add('visible');
+        });
+    }
+    window.addEventListener('scroll', revealOnScroll);
+    window.addEventListener('DOMContentLoaded', revealOnScroll);
+
+    // --- Navbar Scroll Background ---
+    const navbar = document.querySelector('.custom-gradient-bg');
+    window.addEventListener('scroll', () => {
+        if (window.scrollY > 40) navbar.classList.add('solid');
+        else navbar.classList.remove('solid');
+    });
+
+    // --- Scroll-to-top Button ---
+    const scrollBtn = document.querySelector('.scroll-to-top');
+    window.addEventListener('scroll', () => {
+        if (window.scrollY > 200) scrollBtn.classList.add('visible');
+        else scrollBtn.classList.remove('visible');
+    });
+
+    // --- Lazy Loading for Images ---
+    document.querySelectorAll('img[loading="lazy"]').forEach(img => {
+        img.addEventListener('load', () => img.classList.add('loaded'));
+    });
+
+    // --- Smooth Page Fade Transition ---
+    document.body.classList.add('visible');
+    document.querySelectorAll('a').forEach(link => {
+        if (link.target || link.href.startsWith('mailto:') || link.href.startsWith('tel:')) return;
+        link.addEventListener('click', e => {
+            if (link.href && link.href.indexOf(location.hostname) !== -1) {
+                document.body.classList.remove('visible');
+                setTimeout(() => { window.location = link.href; }, 350);
+                e.preventDefault();
+            }
+        });
+    });
+    </script>
+
+    <script>
+    // --- Card Tilt Effect (for .tilt and .media-card) ---
+    document.querySelectorAll('.tilt, .media-card').forEach(card => {
+        card.addEventListener('mousemove', e => {
+            const rect = card.getBoundingClientRect();
+            const x = e.clientX - rect.left, y = e.clientY - rect.top;
+            const cx = rect.width / 2, cy = rect.height / 2;
+            const dx = (x - cx) / cx, dy = (y - cy) / cy;
+            card.style.transform = `rotateY(${dx * 8}deg) rotateX(${-dy * 8}deg) scale(1.04)`;
+        });
+        card.addEventListener('mouseleave', () => {
+            card.style.transform = '';
+        });
+    });
+
+    // --- Scroll Reveal Animation (for .section-reveal, .feature-card, .media-card, .media-header) ---
+    function revealOnScroll() {
+        document.querySelectorAll('.section-reveal, .feature-card, .media-card, .media-header').forEach(el => {
+            const rect = el.getBoundingClientRect();
+            if (rect.top < window.innerHeight - 60) el.classList.add('visible');
+        });
+    }
+    window.addEventListener('scroll', revealOnScroll);
+    window.addEventListener('DOMContentLoaded', revealOnScroll);
+
+    // --- Scroll Snap Looping Illusion ---
+    const snapContainer = document.querySelector('.media-scroll-container.looping');
+    if (snapContainer) {
+        snapContainer.addEventListener('scroll', () => {
+            if (snapContainer.scrollLeft + snapContainer.offsetWidth >= snapContainer.scrollWidth - 2) {
+                snapContainer.scrollLeft = 2;
+            }
+            if (snapContainer.scrollLeft <= 0) {
+                snapContainer.scrollLeft = snapContainer.scrollWidth - snapContainer.offsetWidth - 2;
+            }
+        });
+        snapContainer.scrollLeft = 2;
+    }
+
+    // --- Tap to Expand Card on Mobile ---
+    document.querySelectorAll('.media-card').forEach(card => {
+        card.addEventListener('click', function(e) {
+            if (window.innerWidth > 900) return;
+            document.querySelectorAll('.media-card.expanded').forEach(c => c.classList.remove('expanded'));
+            this.classList.toggle('expanded');
+        });
+    });
+
+    // --- Mobile nav toggle (keeps minimal and safe) ---
+    (function(){
+        const toggle = document.querySelector('.navbar-toggle');
+        const nav = document.querySelector('.nav-links-container');
+        if (!toggle || !nav) return;
+        toggle.addEventListener('click', () => {
+            const open = nav.classList.toggle('open');
+            toggle.classList.toggle('open', open);
+            document.body.classList.toggle('menu-open', open);
+        });
+        nav.querySelectorAll('a').forEach(a => a.addEventListener('click', () => {
+            nav.classList.remove('open'); toggle.classList.remove('open'); document.body.classList.remove('menu-open');
+        }));
+    })();
+</script>
+<!-- ...existing code... -->
