--- a/index.html
+++ b/index.html
@@ -1333,7 +1333,7 @@
 
         <div class="product-grid">
             <div class="product-card">
-                <img src="images/t1.jpeg" alt="Granite 1">
+                <img src="./Images/COSMIC-BLACK-scaled.jpg" alt="Granite 1">
                 <div class="product-overlay">
                     <h3 class="overlay-title">Black Galaxy</h3>
                 </div>
