--- a/index.html
+++ b/index.html
@@ -1236,15 +1236,15 @@
         // 1. Define the slides (Background URL and Text)
         const slides = [
             {
-                url: 'images/im1.jpg',
+                url: './Images/BLUE-PEARL-HQ-scaled.jpg',
                 text: 'Largest Exporter of Processed Granite across the Globe'
             },
             {
-                url: 'images/im2.jpg',
+                url: './Images/AZUL-BAHIA-scaled.jpg',
                 text: 'Advanced Technology for Precision Stone Processing'
             },
             {
-                url: 'images/im6.jpg',
+                url: './Images/BLUE-ANTIQUE-LABRADOR-scaled.jpg',
                 text: 'Trusted Global Supplier of Premium Natural Stone'
             }
         ];
@@ -1339,67 +1339,67 @@
                 </div>
             </div>
             <div class="product-card">
-                <img src="images/t2.jpg" alt="Granite 2">
+                <img src="./Images/BLUE-ANTIQUE-LABRADOR-scaled.jpg" alt="Granite 2">
                 <div class="product-overlay">
                     <h3 class="overlay-title">Absolute Black</h3>
                 </div>
             </div>
             <div class="product-card">
-                <img src="images/t3.jpg" alt="Granite 3">
+                <img src="./Images/BLUE-PEARL-HQ-scaled.jpg" alt="Granite 3">
                 <div class="product-overlay">
                     <h3 class="overlay-title">Steel Grey</h3>
                 </div>
             </div>
             <div class="product-card">
-                <img src="images/t4.jpg" alt="Granite 4">
+                <img src="./Images/BLUE-MARE-scaled.jpg" alt="Granite 4">
                 <div class="product-overlay">
                     <h3 class="overlay-title">Cosmic Black</h3>
                 </div>
             </div>
             <div class="product-card">
-                <img src="images/t5.jpg" alt="Granite 5">
+                <img src="./Images/BLUE-PEARL-HQ-scaled.jpg" alt="Granite 5">
                 <div class="product-overlay">
                     <h3 class="overlay-title">Tan Brown</h3>
                 </div>
             </div>
             <div class="product-card">
-                <img src="images/t6.jpg" alt="Granite 6">
+                <img src="./Images/BLUE-MARE-scaled.jpg" alt="Granite 6">
                 <div class="product-overlay">
                     <h3 class="overlay-title">Viscon White</h3>
                 </div>
             </div>
             <div class="product-card">
-                <img src="images/t7.jpg" alt="Granite 7">
+                <img src="./Images/BLUE-PEARL-HQ-scaled.jpg" alt="Granite 7">
                 <div class="product-overlay">
                     <h3 class="overlay-title">Coffee Brown</h3>
                 </div>
             </div>
             <div class="product-card">
-                <img src="images/t8.jpg" alt="Granite 8">
+                <img src="./Images/BLUE-MARE-scaled.jpg" alt="Granite 8">
                 <div class="product-overlay">
                     <h3 class="overlay-title">Black Forest</h3>
                 </div>
             </div>
             <div class="product-card">
-                <img src="images/t9.jpg" alt="Granite 9">
+                <img src="./Images/BLUE-PEARL-HQ-scaled.jpg" alt="Granite 9">
                 <div class="product-overlay">
                     <h3 class="overlay-title">White Galaxy</h3>
                 </div>
             </div>
             <div class="product-card">
-                <img src="images/t10.jpg" alt="Granite 10">
+                <img src="./Images/BLUE-MARE-scaled.jpg" alt="Granite 10">
                 <div class="product-overlay">
                     <h3 class="overlay-title">Impala Black</h3>
                 </div>
             </div>
             <div class="product-card">
-                <img src="images/t11.jpg" alt="Granite 11">
+                <img src="./Images/BLUE-PEARL-HQ-scaled.jpg" alt="Granite 11">
                 <div class="product-overlay">
                     <h3 class="overlay-title">Red Multicolor</h3>
                 </div>
             </div>
             <div class="product-card">
-                <img src="images/t12.jpg" alt="Granite 12">
+                <img src="./Images/BLUE-MARE-scaled.jpg" alt="Granite 12">
                 <div class="product-overlay">
                     <h3 class="overlay-title">Paradiso</h3>
                 </div>
