--- a/index.html
+++ b/index.html
@@ -192,19 +192,19 @@
 
         /* Individual Box Styles (Backgrounds) */
         .box-1 {
-            background-image: url('images/im7.jpg');
+            background-image: url('./assets/image/pexels-edward-jenner-4250577.jpg');
             /* Placeholder */
 
         }
 
         .box-2 {
-            background-image: url('images/im4.jpg');
+            background-image: url('./assets/image/pexels-edward-jenner-4250578.jpg');
             /* Placeholder */
 
         }
 
         .box-3 {
-            background-image: url('images/im5.jpg');
+            background-image: url('./assets/image/pexels-pixabay-159711.jpg');
             /* Placeholder */
 
         }
@@ -1236,7 +1236,7 @@
         // 1. Define the slides (Background URL and Text)
         const slides = [
             {
-                url: './Images/BLUE-PEARL-HQ-scaled.jpg',
+                url: 'Images/BLUE-PEARL-HQ-scaled.jpg',
                 text: 'Largest Exporter of Processed Granite across the Globe'
             },
             {
